--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -64,9 +64,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.2 (me_want_cookie)",
    "language": "python",
-   "name": "python3"
+   "name": "me_want_cookie"
   },
   "language_info": {
    "codemirror_mode": {
